--- a/css/main.css
+++ b/css/main.css
@@ -407,7 +407,29 @@ header.header-post .post-heading .post-subheading {
   margin-bottom: 0;
 }
 
-.site-tag a {
+// CUSTOM
+
+// for tag cloud and archives
+.tag-cloud {
+  list-style: none;
+  padding: 0;
+  text-align: justify; 
+  font-size: 16px;
+  li {
     display: inline-block;
-    margin-right: 12px;
+    margin: 0 12px 12px 0; 
+  }
+}
+#archives {
+  padding: 5px;
+}
+.archive-group {
+  margin: 5px;
+  border-top: 1px solid #ddd;
+}
+.archive-item {
+  margin-left: 5px;
+}
+.post-tags {
+  text-align: right;
 }
