--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,8 @@ layout: default
   </div>
 </header>
 
+{% include post-tags.html %}
+
 <article>
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
