--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,13 @@ layout: default
   </div>
 </header>
 
-{% include post-tags.html %}
+
+<div class="row">
+    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+	{% include post-tags.html %}
+   </div>
+</div>
+
 
 <article>
   <div class="row">
