--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,12 +16,13 @@ layout: default
   </div>
 </header>
 
-
+<article>
 <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 	{% include post-tags.html %}
    </div>
 </div>
+</article>
 
 
 <article>
