--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,13 +33,15 @@ layout: default
 
 
 {% assign hasSimilar = '' %}
+<div class="row">
+    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 {% for post in site.related_posts %}
     {% assign postHasSimilar = false %}
     {% for tag in post.tags %}
         {% for thisTag in page.tags %}
             {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
                 {% if hasSimilar.size == 0 %}
-                <h4>Similar Posts</h4>
+                <h1>Similar Posts</h1>
                 <ul>
                 {% endif %}
                 <li class="relatedPost">
@@ -57,6 +59,8 @@ layout: default
 {% endfor %}
 {% if hasSimilar.size > 0 %}
     </ul>
+</div>
+</div>
 {% endif %}
 
 
