--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -88,6 +88,9 @@
 		  Theme by
 		  <a href="https://github.com/daattali/beautiful-jekyll">beautiful-jekyll</a>
 		</p>
+	<p>
+		<a href="http://info.flagcounter.com/07de" target="_blank"><img src="http://s03.flagcounter.com/count/07de/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_12/viewers_0/labels_0/pageviews_1/flags_1/" alt="Flag Counter" border="0"></a>
+	</p>
       </div>
     </div>
   </div>
