--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -81,7 +81,7 @@
 		  
 		  {% if site.url-pretty %}
 		  &nbsp;&bull;&nbsp;
-		  <a href="{{ site.url }}">{{ site.url-pretty }}</a> with <img src="https://www.jetbrains.com/company/docs/logo_jetbrains.png">
+		  <a href="{{ site.url }}">{{ site.url-pretty }}</a> developped with <img src="https://www.jetbrains.com/company/docs/logo_jetbrains.png">
 		  {% endif %}
 	    </p>
 		<p class="theme-by text-muted">
