--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,40 @@ layout: base
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <article role="main" class="blog-post">
-	      {{ content }}
-	    </article>
-	  	  
+        {{ content }}
+      </article>
+      
+      {% assign hasSimilar = '' %}
+	<div class="row">
+	    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+	{% for post in site.related_posts %}
+	    {% assign postHasSimilar = false %}
+	    {% for tag in post.tags %}
+	        {% for thisTag in page.tags %}
+	            {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
+	                {% if hasSimilar.size == 0 %}
+	                <h1>Similar Posts</h1>
+	                <ul>
+	                {% endif %}
+	                <li class="relatedPost">
+	                    <a href="{{ site.url }}{{ post.url }}">{{ post.title }}
+	                    {% if post.series %}
+	                        (Series: {{ post.series }})
+	                    {% endif %}
+	                    </a>
+	                </li>
+	                {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
+	                {% assign postHasSimilar = true %}
+	            {% endif %}
+	        {% endfor %}
+	    {% endfor %}
+	{% endfor %}
+	{% if hasSimilar.size > 0 %}
+	    </ul>
+	</div>
+	</div>
+      {% endif %}
+      
       <ul class="pager blog-pager">
         {% if page.previous.url %}
         <li class="previous">
