--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,11 @@ layout: base
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+	  {% include post-tags.html %}
+        </div>
+      </div>
       <article role="main" class="blog-post">
         {{ content }}
       </article>
