--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,6 +12,11 @@
 
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a href="{{ site.url }}" class="" title="Home">
+            <span class="fa fa-home fa-lg"></span>
+          </a>
+        </li>
       {% for link in site.navbar-links %}
         {% if link[1].first %}
           <li class="navlinks-container">
@@ -32,7 +37,7 @@
         {% endfor %}
         <li>
           <a href="/search" class="nav-search-link" title="Search">
-            <span class="fa fa-search nav-search-icon"></span>
+            <span class="fa fa-search fa-lg nav-search-icon"></span>
           <span class="nav-search-text">Search</span>
           </a>
         </li>
